--- a/style-grid.css
+++ b/style-grid.css
@@ -8,14 +8,14 @@ body {
   "left content right"
   "left bottom right"
   "footer footer right";
+  grid-template-columns: 1fr 3fr 1fr; 
   grid-template-rows: 100px minmax(0, 6fr) minmax(auto, 0.5fr) 100px;
-  grid-template-columns: 1fr 3fr 1fr;
   gap: 1px;
   font-family: Arial;
 }
 
 header { grid-area: header; font-size: 14px;}
-.left   { grid-area: left; background: #222; padding: 10px; }
+.left   { grid-area: left; background: #222; padding: 10px; color: #e7e7e7;}
 .content{ grid-area: content; background: #e7e7e7; padding: 10px; }
 .right  { grid-area: right; background: #222; padding: 10px; color: #e7e7e7;}
 footer  { grid-area: footer; }
@@ -69,6 +69,40 @@ a{
   padding-left: 5px;
 }
 
+@media screen and (max-width: 768px) {
+    body {
+        grid-template-areas:
+            "header"
+            "content"
+            "left"
+            "right"
+            "bottom"
+            "footer";
+        grid-template-columns: 1fr; 
+        grid-template-rows: 80px auto auto auto auto 80px;
+    }
 
+    header, footer {
+        padding: 10px;
+        font-size: 12px;
+        height: 80px;
+    }
+    
+    .header-left h1 {
+        font-size: 36px;
+    }
 
+    .left, .right {
+        padding: 15px;
+    }
 
+    .bottom {
+        flex-direction: column;
+        gap: 10px;
+    }
+ 
+    .content img {
+        width: 100%; 
+        height: auto;
+    }
+}
